Fix button alignment

--- a/src/components/gataca-qr/gataca-qr.css
+++ b/src/components/gataca-qr/gataca-qr.css
@@ -8,6 +8,10 @@ img {
     margin-right: auto;
 }
 
+.buttonContainer{
+    display: inline-block;
+}
+
 .gatacaButton {
     display: flex;
     margin:3px;
@@ -21,6 +25,7 @@ img {
     border-radius: 6px;
     text-shadow: aliceblue;
     color: whitesmoke;
+    
 }
 
 .buttonImg {
